fixed some container spacing

--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -1,5 +1,8 @@
 .feature {
     background-color: $lightgrayishblue;
+    &-content {
+        background-color: $lightgrayishblue;
+    }
     &__text {
         margin-bottom: 2.25rem;
         @include breakpoint-up(large){
