--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -19,9 +19,11 @@
             height: 41rem;
             background-image: url('/images/bg-intro-desktop.svg');
             background-position: left center;
+            right: -6.875rem;
         }
 
         position: relative;
+        
         background-image: url('/images/bg-intro-mobile.svg');
         background-size: cover;
         background-repeat: no-repeat;
